# App-LabRecorder

./: .gitmodules  CMakeLists.txt  build.bat
src/: mainwindow.cpp  mainwindow.ui  recording.cpp  recording.h
xdfwriter/: xdfwriter.h
